--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="quicksand-font">
     <marquee width="100%" direction="left" height="30px">
-        50% discount is available for new student admission. Use code <strong>"NEWBEE50"</strong>
+        50% discount is available for new student admission. Use code <strong>NEWBEE50</strong>
     </marquee>
     <header>
         <nav>
