--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p class="raleway-font">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <a href="" class="a1">Read More</a>
+                    <a href="#" class="a1">Read More</a>
                 </div>
                 <div class="card">
                     <img src="./assets/elementary.png" alt="">
@@ -63,7 +63,7 @@
                     <p class="raleway-font">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <a href="" class="a2">Read More</a>
+                    <a href="#" class="a2">Read More</a>
                 </div>
                 <div class="card">
                     <img src="./assets/middle.png" alt="">
@@ -71,12 +71,12 @@
                     <p class="raleway-font">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <a href="" class="a3">Read More</a>
+                    <a href="#" class="a3">Read More</a>
                 </div>
             </div>
             <div class="navigation">
-                <a href=""><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></a>
-                <a href=""><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
             </div>
         </div>
     </section>
@@ -149,10 +149,10 @@
             <div class="div2">
                 <h3>About School</h3>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Facilities</a></li>
-                    <li><a href="">Admisssion</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Facilities</a></li>
+                    <li><a href="#">Admisssion</a></li>
                 </ul>
             </div>
             <div class="div3">
